# equality-check-across-groups

./: Cargo.toml  README.md
src/: main.rs
